--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <script src="https://kit.fontawesome.com/3c4e114ccb.js" crossorigin="anonymous"></script>
-  <title>NongSarang</title>
+  <title>JuSarang</title>
 </head>
 
 <body>
